--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <h2 class="logo">Logo</h2>
+        <h2 class="logo">PUREBLOOD.io</h2>
         <nav class="navigation">
             <a href="#">Home</a>
             <a href="#">About</a>
