--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <button type="submit" class="btn">Login</button>
                 <div class="login-register">
-                    <p><a href="">#</a></p>
+                    <p>Don't have an account?<a href="#" class="register-link">Register</a></p>
                 </div>
             </form>
 
