--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 <body>
 
+
+<!-- LOGO / Title at top left corner -->
+
     <header>
         <h2 class="logo">PUREBLOOD.io</h2>
         <nav class="navigation">
@@ -24,6 +27,12 @@
     </header>
 
     <div class="wrapper">
+        <span class="icon-close">
+            <ion-icon name="close-outline"></ion-icon>
+        </span>
+
+<!-- LOGIN POP-UP BOX transparent centre screen -->
+
         <div class="form-box login">
             <h2>Login</h2>
             <form action="#">
@@ -49,12 +58,46 @@
 
                 <button type="submit" class="btn">Login</button>
                 <div class="login-register">
-                    <p>Don't have an account?<a href="#" class="register-link">    Register</a></p>
+                    <p>Don't have an account?  <a href="#" class="register-link">    Register</a
+                    </p>
+                </div>
+            </form>
+        </div>
+
+
+
+        <div class="form-box register">
+            <h2>Registration</h2>
+            <form action="#">
+
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
+                    <input type="text" required>
+                    <label>Username</label>
+                </div>
+
+                <div class="input-box">
+                    <span class="icon">
+                        <ion-icon name="lock-closed-outline"></ion-icon>
+                    </span>
+                    <input type="password" required>
+                    <label>Password</label>
+                </div>
+
+                <div class="remember-forget">
+                <label><input type="checkbox"> I agree to the terms & conditions </label>
+                <a href="#">Forgot Password?</a>
+                </div>
+
+                <button type="submit" class="btn">Register</button>
+                <div class="login-register">
+                    <p>Already have an account?  <a href="#" class="login-link">    Login</a></p>
                 </div>
 
             </form>
 
         </div>
+
     </div>
 
     <script src="script.js"></script>
